[package]
name = "redis_connector"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "to connect redis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.21.4", features = [ "cluster"] }
bb8-redis = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-aux = "3.0.1"
anyhow = "1.0"
once_cell = "1.9.0"
tracing = "0.1"
async-trait = "0.1.50"

[dev-dependencies]
mocktopus = "0.7.11"